# python_project_template

./: Dockerfile  README.md  pyproject.toml
example/: exa_toolz.py  fastapi_with_loguru.py  fastcore_cli.py
